language_tests/source_files/invalid/ufcs_wrong_receiver.tr
// Test: UFCS Invalid Receivers
// Verifies that UFCS calls without proper references produce errors

interface SpeakerByRef {
    func greet(&self)
}

interface SpeakerByMutRef {
    func increment(&mut self)
}

struct Human {
    name: string
}

struct Counter {
    value: int
}

impl SpeakerByRef for Human {
    func greet(&self) {
        print(self.name)
    }
}

impl SpeakerByMutRef for Counter {
    func increment(&mut self) {
        self.value = self.value + 1
    }
}

type int = isize

func main() {
    let h = Human { name: "Alice" }
    var c = Counter { value: 0 }

    // ERROR: Missing & - should require &self
    SpeakerByRef.greet(h)

    // ERROR: Missing &mut - should require &mut self
    SpeakerByMutRef.increment(c)

    // ERROR: Wrong mutability - passing & when &mut required
    SpeakerByMutRef.increment(&c)
}
